fix mobile hamburger on mobile, adjust padding on main container

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -32,7 +32,7 @@ main {
   flex-wrap: nowrap;
   width: 96%;
   margin: 0.5rem auto 0 auto;
-  padding: 0 2.5rem;
+  padding: 0 1rem;
   padding-top: 0;
   /*  max width no larger than 1200px as the page looks too sparse and project cards grow too big */
   max-width: 1200px;
@@ -47,6 +47,14 @@ footer {
 .title,
 .subtitle {
   color: var(--almost-white) !important;
+}
+
+.title {
+  font-size: 1.3rem;
+}
+
+.subtitle {
+  font-size: .6rem;
 }
 
 #login-container {
